<resources>
    <string name="app_name" translatable="false">Motto</string>
    <string name="title_search">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="title_notes">Notes</string>
    <string name="unknown_author">Unknown author</string>
    <string name="motto_about">Click motto to copy it</string>
    <string name="motto_copied">Motto copied!</string>
    <string name="motto_source">Source:</string>
    <string name="authors">Authors</string>
    <string name="topics">Topics</string>
    <string name="films">Films</string>
    <string name="anime">Anime</string>
    <string name="channels">Channels</string>
    <string name="series">Series</string>
    <string name="books">Books</string>
    <string name="found_random_mottos">Our selection</string>
    <string name="enter_request">Enter words from motto</string>
    <string name="found_on_request">Found on your request</string>
    <string name="not_found_on_request">Nothing found. Tap this text to see our selection</string>
    <string name="not_found_random_mottos">Our selected mottos not found. Check your internet connection</string>
    <string name="not_found_any_mottos">Nothing found. Check your internet connection</string>
    <string name="not_saved_any_mottos">You have no saved mottos. Click any motto, press \"like\" button and it will be saved &amp; displayed here</string>
    <string name="how_to_delete_motto">Make a long press to delete the motto</string>
    <string name="app_updated">App Updated.</string>
    <string name="restart">Restart</string>
    <string name="is_copy_with_source">Copy with source</string>
    <string name="with_source">With source</string>
    <string name="is_sort_sources_by_random">Sort sources by random</string>
    <string name="with_random">By random</string>
    <string name="is_sort_mottos_by_random">Sort mottos by random instead of rating (only in dashboard)</string>
    <string name="enter_note_quote">Enter quote</string>
    <string name="enter_note_source">Enter source (author)</string>
    <string name="lets_create_your_motto">Let\'s create your motto</string>
    <string name="submit">Submit</string>
    <string name="saved_notes">Your mottos. Make a long tap on card for full open</string>
    <string name="no_saved_notes">You have no saved mottos. Swipe the menu below to add first</string>
    <string name="note_added">Motto added</string>
    <string name="note_not_added">Motto not added. Fields filled incorrectly</string>
    <string name="choose_action">Choose action</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="note_updated">Note updated</string>
    <string name="note_not_updated">Note not updated. Fields filled incorrectly</string>
    <string name="lets_edit_your_motto">Let\'s edit your motto</string>
    <string name="give_feedback_or_rate">Give feedback | Rate app</string>
    <string name="open_tg_channel">Open developer Blog</string>
</resources>
