<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_space_dashboard_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favourite_black_24dp"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>
